2009-01-07  Geoff Norton  <gnorton@novell.com>

	* UnixSignalTest.cs: Disable the tests that storm signals on OSX.
	(They wont work)

2008-11-19  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignalTest.cs: Add tests for RealTimeSignum constructors,
	  .RealTimeSignum and .IsRealTimeSignal properties.
	  Patch thanks to tim.jenks@realtimeworlds.com.

2008-11-12 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* UnixSignalTest.cs: use WaitAny + 30s timeout.

2008-02-12  Zoltan Varga  <vargaz@gmail.com>

	* UnixSignalTest.cs: Fix the build.

2008-02-09  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixSignalTest.cs: Added; tests Mono.Unix.UnixSignal.

2006-07-02  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixPathTest.cs: Added; test UnixPath.Combine().

2005-12-07  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixMarshalTest.cs: Make test public so that it's actually executed by
	  NUnit; NUnit doesn't like private Test* methods -- rename; test
	  UnixMarshal.PtrToString for a string containing 0 characters (this used to
	  cause an ArgumentOutOfRangeException due to a bug).

2005-12-05  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixUserTest.cs: s/UnixUser/UnixUserInfo/g (UnixUser is obsolete).

2005-12-05  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixMarshalTest.cs: s/Free/FreeHeap/g (UnixMarshal.Free will be removed).

2005-11-28  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixGroupTest.cs: The type of UnixGroupInfo.GroupId changed.  UnixGroup is
	  deprecated; use UnixGroupInfo instead.
	* UnixUserTest.cs: The type of UnixUserInfo.UserId changed.  UnixUser if
	  deprecated; use UnixUserInfo instead.

2005-10-26  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixMarshalTest.cs: s/StringToAlloc/StringToHeap/g (UnixMarshal change).
	* UnixEncodingTest.cs: Deal with UnixEncoding.EscapeByte value change.

2005-10-25  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixEncodingTest.cs: Added string/byte[] encoding tests for
	  Mono.Unix.UnixEncoding.

2005-10-17  Jonathan Pryor  <jonpryor@vt.edu>
